--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,10 @@
     margin: 0 auto;
 }
 
+#title{
+    text-align: center;
+    padding: 40px;
+}
 .card{
     border: 2px solid black;
     width: 200px;
@@ -23,11 +27,12 @@
     padding: 5px;
 }
 
-#activities {
+.activities {
     width: 800px;
-    display: flex;
     margin: 0 auto;
-    padding-top: 50px;
+    margin-top: 50px;
+    border: 1px solid black;
+
 }
 
 #button{
